CWrapper/Runtime/Runtime.h

typedef uintptr_t luna_errcode_t;
typedef struct LunaFileIteratorHandle
{
    luna_handle_t object;
    void* ifile_iterator;
} LunaFileIteratorHandle;
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_file_move(const char* from_path, const char* to_path);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_file_delete(const char* path);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_file_create_dir(const char* path);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_file_open_dir(const char* path, LunaFileIteratorHandle* out_iterator);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_stream_read(void* self, void* buffer, uint64_t size, uint64_t* out_read_bytes);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_stream_write(void* self, const void* buffer, uint64_t size, uint64_t* out_write_bytes);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_seekable_stream_tell(void* self, uint64_t* out_position);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_seekable_stream_seek(void* self, int64_t offset, uint32_t mode);
LUNA_RUNTIME_C_API uint64_t luna_runtime_seekable_stream_get_size(void* self);
LUNA_RUNTIME_C_API luna_errcode_t luna_runtime_seekable_stream_set_size(void* self, uint64_t size);
LUNA_RUNTIME_C_API void luna_runtime_file_flush(void* self);
LUNA_RUNTIME_C_API int32_t luna_runtime_file_iterator_is_valid(void* self);
LUNA_RUNTIME_C_API const char* luna_runtime_file_iterator_get_filename(void* self);
LUNA_RUNTIME_C_API uint32_t luna_runtime_file_iterator_get_attributes(void* self);
LUNA_RUNTIME_C_API int32_t luna_runtime_file_iterator_move_next(void* self);