Managed/Runtime/Internal/Generated/RuntimeNativeGenerated.g.cs


    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_move", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileMove([MarshalAs(UnmanagedType.LPUTF8Str)] string fromPath, [MarshalAs(UnmanagedType.LPUTF8Str)] string toPath);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_delete", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileDelete([MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_create_dir", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileCreateDir([MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_open_dir", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr FileOpenDir([MarshalAs(UnmanagedType.LPUTF8Str)] string path, out NativeFileIteratorHandle outIterator);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_stream_read", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr StreamRead(IntPtr self, IntPtr buffer, ulong size, out ulong outReadBytes);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_stream_write", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr StreamWrite(IntPtr self, IntPtr buffer, ulong size, out ulong outWriteBytes);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_seekable_stream_tell", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SeekableStreamTell(IntPtr self, out ulong outPosition);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_seekable_stream_seek", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SeekableStreamSeek(IntPtr self, long offset, uint mode);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_seekable_stream_get_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern ulong SeekableStreamGetSize(IntPtr self);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_seekable_stream_set_size", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr SeekableStreamSetSize(IntPtr self, ulong size);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_flush", CallingConvention = CallingConvention.Cdecl)]
    internal static extern void FileFlush(IntPtr self);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_iterator_is_valid", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int FileIteratorIsValid(IntPtr self);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_iterator_get_filename", CallingConvention = CallingConvention.Cdecl)]
    internal static extern IntPtr FileIteratorGetFilename(IntPtr self);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_iterator_get_attributes", CallingConvention = CallingConvention.Cdecl)]
    internal static extern uint FileIteratorGetAttributes(IntPtr self);

    [DllImport("LunaRuntimeC", EntryPoint = "luna_runtime_file_iterator_move_next", CallingConvention = CallingConvention.Cdecl)]
    internal static extern int FileIteratorMoveNext(IntPtr self);

}
